Desktop navigation styles.

--- a/src/Hero/Hero.less
+++ b/src/Hero/Hero.less
@@ -1,6 +1,10 @@
+@import './../commons.less';
+
 .hero-area {
-    background: linear-gradient(180deg, #039BE5 10.64%, #039BE5 57.01%);
+    // TODO fancy background
+    // background: linear-gradient(180deg, #039BE5 10.64%, #039BE5 57.01%);
     background-blend-mode: multiply;
     mix-blend-mode: normal;
     // opacity: 0.24;
+    background-color: @main-cl;
 }
