--- a/src/commons.less
+++ b/src/commons.less
@@ -1,22 +1,10 @@
-/*
-==============================================
-Fonts Installation
-==============================================
-*/
-
-@import url('https://fonts.googleapis.com/css?family=Lato');
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-
-
 // ==============================================
 // Variables
 // ==============================================
 
 
 // Layout
-@nav-width: 270px;
-@form-active-width: 44.875em;
-@textarea-width: 32.875em;
+@content-max-width: 1140px; 
 
 // Color variables
 
@@ -136,8 +124,8 @@ Fonts Installation
     font-family: @base-font;
     font-style: normal;
     font-weight: normal;
-    line-height: normal;
-    font-size: 16px;
+    // line-height: normal;
+    font-size: 1em;
     color: #FFFFFF;
 }
 
