--- a/src/index.less
+++ b/src/index.less
@@ -1,6 +1,24 @@
+/*
+==============================================
+Fonts Installation
+==============================================
+*/
+
+@import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+/*
+==============================================
+Neutralize styles
+==============================================
+*/
+
 body {
   box-sizing: border-box;
   margin: 0;
+
+  /* base font size */
+  font-size: 16px;
 }
 
 ul {
