--- a/src/Navigation/Navigation.less
+++ b/src/Navigation/Navigation.less
@@ -1,1 +1,40 @@
-@import '../commons.less';
+@import './../commons.less';
+
+.header {
+    display: flex;
+    max-width: @content-max-width;
+
+    margin: auto;
+    padding-top: 0.875em;
+}
+
+.header__logo {
+    margin-right: 2.5em;
+}
+
+
+.header__nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+
+    .nav-text-mix();
+}
+
+.nav_left, .nav_right {
+    display: flex;
+    align-items: center;
+}
+
+.nav__item {
+    &:not(:last-child) {
+        margin-right: 3.250em;
+    }
+}
+
+.nav__item_button-style {
+    padding: .5em 2em;
+    border-radius: .25em;
+    border: 1px solid white;
+}
