Styles for Policies / Contact / Footer

--- a/src/Hero/Hero.less
+++ b/src/Hero/Hero.less
@@ -1,10 +1,8 @@
 @import './../commons.less';
 
-.hero-area {
-    // TODO fancy background
-    // background: linear-gradient(180deg, #039BE5 10.64%, #039BE5 57.01%);
-    background-blend-mode: multiply;
-    mix-blend-mode: normal;
-    // opacity: 0.24;
-    background-color: @main-cl;
+.Hero {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+    background-color: #FFFFFF;
 }
