--- a/src/Policies/Policies.less
+++ b/src/Policies/Policies.less
@@ -1,8 +1,11 @@
 @import './../commons.less';
 
 .Policies {
-  // TODO fancy bg
-  background-color: @main-cl;
+  background-color: #FFFFFF;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+  padding-top: 20.625rem;
 }
 
 .Policies__content {
