--- a/src/commons.less
+++ b/src/commons.less
@@ -183,8 +183,8 @@
    padding: 0.750em 0;
    width: 240px;
    box-shadow: 0px 2px 2px rgba(127, 32, 2, 0.475175);
-   border-radius: 5px;
-//    .border-radius(5px);
+//    border-radius: 5px;
+   .border-radius(5px);
 }
 
 .content-width-mix() {
