--- a/src/index.less
+++ b/src/index.less
@@ -7,6 +7,9 @@ Fonts Installation
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
+// HN App
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
+
 /*
 ==============================================
 Neutralize styles
