--- a/src/HNHeader/HNHeader.less
+++ b/src/HNHeader/HNHeader.less
@@ -2,8 +2,52 @@
 
 .HNHeader {
   background: @hn-accent-cl;
+  .display(flex);
+  padding: 0 1.563rem;
+
+  height: 3.625em;
+  .align-items(center);
 }
 
-.HNHeader__logo, .HNHeader__nav-link {
+.HNHeader__logo {
+  display: inline-block;
+  width: @hn-content-margin;
+}
+
+.HNHeader__logo-text {
+  display: inline;
+}
+
+.HNHeader__logo-text, .HNHeader__nav-link {
   .hn-nav-text-mix();
+}
+
+.HNHeader__logo-text {
+  border: 1px solid white;
+  padding: 0.333em;
+}
+
+.HNHeader__nav {
+  .display(flex);
+  .flex-grow(2);
+
+  height: 100%;
+  .display(flex);
+  .align-items(center);
+}
+
+.HNHeader__nav-icon {
+  margin-right: .5em;
+}
+
+.HNHeader__nav-link {
+  padding: 0 3rem;
+
+  height: 100%;
+  .display(flex);
+  .align-items(center);
+}
+
+.HNHeader__nav-link_selected {
+  border-bottom: .333em solid #ed6535;
 }
