--- a/src/commons.less
+++ b/src/commons.less
@@ -7,7 +7,8 @@
 
 // Layout
 @content-max-width: 1140px;
-@hn-content-max-width: 90%;
+@hn-content-margin: 5.938rem;
+
 
 // Color variables
 
@@ -24,10 +25,13 @@
 
 // HN App 
 @hn-accent-cl: #4A47E9;
+@hn-orange:  #ed6535;
 @hn-text-cl: #000000;
+@hn-message-cl: #515151;
 @hn-nav-cl: #FFFFFF;
 @hn-tile-bg: #F6F6F6;
 @hn-heart-unselected: #A0A0A0;
+
 
 
 
@@ -193,7 +197,6 @@
    padding: 0.750em 0;
    width: 240px;
    box-shadow: 0px 2px 2px rgba(127, 32, 2, 0.475175);
-//    border-radius: 5px;
    .border-radius(5px);
 }
 
@@ -205,7 +208,7 @@
 // HN App Typography
 
 .hn-nav-text-mix() {
-    font-size: 0.750em;
+    font-size: 0.750rem;
     font-family: @hn-font;
     font-style: normal;
     font-weight: 500;
@@ -213,3 +216,30 @@
     text-align: center;
     color: @hn-nav-cl;
 }
+
+.hn-story-text-mix() {
+    font-size: 0.750rem;
+    font-family: @hn-font;
+    font-weight: normal;
+    line-height: normal;
+    color: @hn-text-cl;
+}
+
+.hn-message-mix() {
+    font-size: 1.4em;
+    font-family: @hn-font;
+    font-weight: normal;
+    line-height: normal;
+    color: @hn-message-cl;
+}
+
+.hn-message-cta-mix() {
+    font-size: .750rem;
+    font-family: @hn-font;
+    font-weight: normal;
+    line-height: normal;
+    color: @hn-message-cl;
+    color: @hn-accent-cl;
+}
+
+// HN App Layout Mixins
