--- a/src/Story/Story.less
+++ b/src/Story/Story.less
@@ -10,6 +10,10 @@
   position: relative;
 }
 
+.Story_bkmarked {
+  .selected-storty-shadow();
+}
+
 .Story__haeding-link , .Story__score, .Story__author {
   .hn-story-text-mix();
 }
