--- a/src/Hero/Hero.less
+++ b/src/Hero/Hero.less
@@ -5,4 +5,6 @@
     background-size: cover;
     background-position: bottom;
     background-color: #FFFFFF;
+
+    background-position-y: -14.375rem;
 }
