--- a/src/commons.less
+++ b/src/commons.less
@@ -1,5 +1,14 @@
 @import './../node_modules/lesshat/lesshat.less';
 
+
+// ==============================================
+// Media Queries
+// ==============================================
+
+@menu-fold: ~'screen and (min-width: 1200px)';
+@tablets:  ~'screen and (min-width: 720px) and (max-width: 920px)';
+@mobile: ~'screen and (max-width: 720px)';
+
 // ==============================================
 // Variables
 // ==============================================
@@ -68,7 +77,7 @@
     font-style: normal;
     font-weight: 300;
     line-height: normal;
-    font-size: 3.125em;
+    font-size: 3.125rem;
     text-align: center;
     letter-spacing: 1px;
     color: #fff;
@@ -79,7 +88,7 @@
     font-style: normal;
     font-weight: 300;
     line-height: 1.227em;
-    font-size: 2.750em;
+    font-size: 2.750rem;
     text-align: center;
     letter-spacing: 1px;
     color: #FFFFFF;
@@ -90,7 +99,7 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    font-size: 1.500em;
+    font-size: 1.500rem;
     letter-spacing: 0.74px;
     color: @h3-cl;
 }
@@ -100,7 +109,7 @@
     font-style: normal;
     font-weight: normal;
     line-height: normal;
-    font-size: 1.750em;
+    font-size: 1.750rem;
     text-align: center;
     color: #FFFFFF;
 }
@@ -110,7 +119,7 @@
     font-style: normal;
     font-weight: normal;
     line-height: normal;
-    font-size: 1em;
+    font-size: 1rem;
     color: @placeholder-cl;
 }
 
@@ -119,7 +128,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    font-size: 1em;
+    font-size: 1rem;
     color: @main-cl;
 }
 
@@ -128,7 +137,7 @@
     font-style: normal;
     font-weight: 300;
     line-height: 1.583em;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     text-align: center;
     letter-spacing: 1px;
     color: #FFFFFF;
@@ -138,8 +147,8 @@
     font-family: @base-font;
     font-style: normal;
     font-weight: normal;
-    line-height: 32px;
-    font-size: 16px;
+    line-height: 2em;
+    font-size: 1rem;
     letter-spacing: 0.74px;  
     color: #6B7C93;
 }
@@ -149,7 +158,7 @@
     font-style: normal;
     font-weight: normal;
     line-height: 1.313em;
-    font-size: 1em;
+    font-size: 1rem;
 
     color: #6B7C93;
 }
@@ -159,7 +168,7 @@
     font-style: normal;
     font-weight: normal;
     // line-height: normal;
-    font-size: 1em;
+    font-size: 1rem;
     color: @color;
 }
 
@@ -168,7 +177,7 @@
     font-style: normal;
     font-weight: normal;
     line-height: normal;
-    font-size: 20px;
+    font-size: 1.250em;
     text-align: center;
     color: #FFFFFF;
 }
@@ -178,7 +187,7 @@
     font-style: normal;
     font-weight: normal;
     line-height: normal;
-    font-size: 1em;;
+    font-size: 1rem;;
     color: @main-cl;
 }
 
@@ -187,7 +196,7 @@
     font-style: normal;
     font-weight: normal;
     line-height: normal;
-    font-size: 0.875em;
+    font-size: 0.875rem;
     color: @p-cl;
 }
 
@@ -226,7 +235,7 @@
 }
 
 .hn-message-mix() {
-    font-size: 1.4em;
+    font-size: 1.4rem;
     font-family: @hn-font;
     font-weight: normal;
     line-height: normal;
@@ -243,3 +252,8 @@
 }
 
 // HN App Layout Mixins
+.selected-storty-shadow() {
+    -webkit-box-shadow: .333em .333em 0 0 rgba(237,102,53,1);
+    -moz-box-shadow: .333em .333em 0 0 rgba(237,102,53,1);
+    box-shadow: .333em .333em 0 0 rgba(237,102,53,1);
+}
