--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,5 @@
+@import './commons.less';
+
 /*
 ==============================================
 Fonts Installation
@@ -6,6 +8,7 @@ Fonts Installation
 
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 // HN App
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
@@ -22,6 +25,10 @@ body {
 
   /* base font size */
   font-size: 16px;
+
+  @media @mobile {
+    font-size: 14px;
+  }
 }
 
 ul {
