Landing page responsive styles.

--- a/src/Banner/Banner.less
+++ b/src/Banner/Banner.less
@@ -4,23 +4,37 @@
     .content-width-mix();
     text-align: center;
 
-    padding: 5.750em 0;
+    padding: 5.750rem 0;
+
+    @media @mobile {
+      padding: 1.625rem 0 3.125rem;
+    }
 }
 
 .Banner__heading {
   .h2-mix();
+
+  @media @mobile {
+    margin-bottom: 0.625rem;
+  }
 }
 
 .Banner__description {
   .p-description-mix();
-  margin: auto auto 1.667em;
+  margin: auto auto 1.667rem;
   width: 70%;
+
+  @media @mobile {
+    margin: auto;
+    width: @mobile-width;
+    margin-bottom: 1.625em;
+  }
 }
 
 .Banner__button {
   display: inline-block;
   .cta-btn-mix();
-  margin-bottom: 1.900em;
+  margin-bottom: 1.900rem;
 }
 
 .Banner__example-img {
