--- a/src/HeaderMobile/HeaderMobile.less
+++ b/src/HeaderMobile/HeaderMobile.less
@@ -4,8 +4,8 @@
   background-color: #ffffff;
   .display(flex); 
   .justify-content(space-between);
-
-  padding: 14px 11px;
+  .align-items(center);
+  padding: 1rem;
 }
 
 .HeaderMobile__hamburger-icon {
