--- a/src/commons.less
+++ b/src/commons.less
@@ -2,12 +2,25 @@
 
 
 // ==============================================
+// Functions
+// ==============================================
+.to(@target, @context: 16 ) {
+    @em: (@target / @context) + 0em;
+}
+
+.toR(@target, @context: 16 ) {
+    @rem: (@target / @context) + 0em;
+}
+
+
+// ==============================================
 // Media Queries
 // ==============================================
 
 @menu-fold: ~'screen and (min-width: 1200px)';
 @tablets:  ~'screen and (min-width: 720px) and (max-width: 920px)';
 @mobile: ~'screen and (max-width: 720px)';
+@above-mobile: ~'screen and (min-width: 721px)';
 
 // ==============================================
 // Variables
@@ -16,6 +29,7 @@
 
 // Layout
 @content-max-width: 1140px;
+@mobile-width: 85%;
 @hn-content-margin: 5.938rem;
 
 
@@ -67,9 +81,15 @@
     font-style: normal;
     font-weight: 300;
     line-height: normal;
-    font-size: 3.875em;
+    font-size: .to(62)[@em];
     letter-spacing: 1px;
     color: @color;
+    
+    @media @mobile {
+        font-size: 2rem;
+        line-height: .to(43, 32)[@em];
+        letter-spacing: 0.580645px;
+    }
 }
 
 .h2-mix() {
@@ -81,6 +101,10 @@
     text-align: center;
     letter-spacing: 1px;
     color: #fff;
+
+    @media @mobile {
+        font-size: 2.750rem;
+    }
 }
 
 .h2-policies-mix() {
@@ -92,6 +116,11 @@
     text-align: center;
     letter-spacing: 1px;
     color: #FFFFFF;
+
+    @media @mobile {
+        line-height: 1.344em;
+        font-size: 2rem;
+    }
 }
 
 .h3-mix() {
@@ -102,6 +131,10 @@
     font-size: 1.500rem;
     letter-spacing: 0.74px;
     color: @h3-cl;
+
+    @media @mobile {
+        font-size: 1.250rem;
+    }
 }
 
 .h3-contact-mix() {
@@ -112,6 +145,11 @@
     font-size: 1.750rem;
     text-align: center;
     color: #FFFFFF;
+
+    @media @mobile {
+        line-height: 1.344em;
+        font-size: 2rem;
+    }
 }
 
 .placeholder-text-mix() {
@@ -121,6 +159,8 @@
     line-height: normal;
     font-size: 1rem;
     color: @placeholder-cl;
+
+
 }
 
 .h4-policies-mix() {
@@ -129,6 +169,7 @@
     font-weight: 500;
     line-height: normal;
     font-size: 1rem;
+    letter-spacing: 0.74px;
     color: @main-cl;
 }
 
@@ -141,6 +182,12 @@
     text-align: center;
     letter-spacing: 1px;
     color: #FFFFFF;
+
+    @media @mobile {
+        font-weight: normal;
+        line-height: 1.375em;
+        font-size: 1rem;
+    }
 }
 
 .p-features-mix() {
@@ -167,7 +214,7 @@
     font-family: @base-font;
     font-style: normal;
     font-weight: normal;
-    // line-height: normal;
+    line-height: normal;
     font-size: 1rem;
     color: @color;
 }
@@ -177,9 +224,13 @@
     font-style: normal;
     font-weight: normal;
     line-height: normal;
-    font-size: 1.250em;
+    font-size: 1.250rem;
     text-align: center;
     color: #FFFFFF;
+
+    @media @mobile {
+        font-size: 1.250rem;
+    }
 }
 
 .footer-text-mix() {
