--- a/src/index.less
+++ b/src/index.less
@@ -19,16 +19,15 @@ Neutralize styles
 ==============================================
 */
 
-body {
-  box-sizing: border-box;
-  margin: 0;
+html {
 
   /* base font size */
   font-size: 16px;
+}
 
-  @media @mobile {
-    font-size: 14px;
-  }
+body {
+  box-sizing: border-box;
+  margin: 0;
 }
 
 ul {
