--- a/src/Contact/Contact.less
+++ b/src/Contact/Contact.less
@@ -16,7 +16,7 @@
 .Contact__heading {
   .h3-contact-mix();
 
-  margin-bottom: 2.125rem;
+  margin-bottom: .toR(34)[@rem];
 }
 
 .Contact__form {
@@ -32,7 +32,7 @@
   border: 1px solid #DADFE9;
   box-sizing: border-box;
   border-radius: 5px;
-  padding: 15px; 
+  padding: 15px;
 
   &::-webkit-input-placeholder {
     .placeholder-text-mix();
@@ -49,3 +49,5 @@
 
   margin-top: 0.750rem;
 }
+
+@import './_Contact.mobile.less';
