--- a/src/Solutions/Solutions.less
+++ b/src/Solutions/Solutions.less
@@ -6,38 +6,10 @@
   padding: 6.375rem 4.5rem 0;
 
  .display(flex);
-
-  @media @mobile {
-    display: block;
-    width: @mobile-width;
-    margin: auto;
-    padding: .toR(48)[@rem] 0;
-    text-align: center;
-  }
 }
 
 .Solutions__heading, .Solutions__features {
   width: 50%;
-
-  @media @mobile {
-    width: 100%;
-  }
-}
-
-.Solutions__features-icon_desktop {
-  margin-top: .5rem;
-
-  @media @mobile {
-    display: none;
-  }
-}
-
-.Solutions__features-icon_mob {
-  display: inline-block;
-
-  @media @above-mobile {
-    display: none;
-  }
 }
 
 .Solutions__heading {
@@ -45,38 +17,38 @@
 }
 
 .Solutions__features-item {
- .display(flex);
-  align-items: flex-start;
+  .display(flex);
+   align-items: flex-start;
+ 
+   padding-left: 5rem;
+ 
+   &:not(:last-child) {
+     margin-bottom: 3.875rem;
+   }
+ }
+ 
+ .Solutions__features-box {
+   margin-left: 2.750rem;
+ }
 
-  padding-left: 5rem;
+.Solutions__features-icon_desktop {
+  margin-top: .5rem;
+}
 
-  &:not(:last-child) {
-    margin-bottom: 3.875rem;
-  }
-
-  @media @mobile {
-    padding: 0;
+.Solutions__features-icon_mob {
+  @media @above-1200 {
+    display: none;
   }
 }
 
-.Solutions__features-box {
-  margin-left: 2.750rem;
-
-  @media @mobile {
-    margin: auto;
-  }
-}
-
-.Solutions__features-heading {
+.Solutions__features-heading-text {
   .h3-mix();
 
   margin-bottom: 0.833rem;
-
-  @media @mobile {
-    display: inline-block;
-  }
 }
 
 .Solutions__features-description {
   .p-features-mix();
 }
+
+@import './_Solutions.mobile.less';
