--- a/src/Story/Story.less
+++ b/src/Story/Story.less
@@ -14,7 +14,7 @@
   .selected-storty-shadow();
 }
 
-.Story__haeding-link , .Story__score, .Story__author {
+.Story__haeding-link, .Story__haeding-text, .Story__score, .Story__author {
   .hn-story-text-mix();
 }
 
