increase margin on banner desc

--- a/src/Banner/Banner.less
+++ b/src/Banner/Banner.less
@@ -13,7 +13,7 @@
 
 .Banner__description {
   .p-description-mix();
-  margin: auto auto 1.667rem;
+  margin: auto auto .toR(42)[@rem];
   width: 70%;
 }
 
