--- a/src/MobileMenu/MobileMenu.less
+++ b/src/MobileMenu/MobileMenu.less
@@ -32,35 +32,8 @@
   height: 20px
 }
 
-.Mobilemenu__nav-list {
-  .display(flex);
-  .flex-direction(column);
-  .align-items(flex-start);
-
-  .nav__item:not(:last-child) {
-    margin-bottom: 2.25em;
-    margin-right: 0;
+.MobileMenu {
+  .SocialMedia {
+    margin-top: 3.5rem;
   }
-
-  .nav__link {
-    .nav-text-mix(@main-cl);
-  }
-
-  .nav__item_button-style {
-    padding: .5em 2em;
-    border-radius: .25em;
-    border: 1px solid @main-cl;
-  }
-
-  .nav__dropdown-icon_mobile-menu {
-    font-family: Material Icons;
-    font-style: normal;
-    font-weight: normal;
-    line-height: normal;
-    font-size: 1em;
-    padding-top: .125em;
-    color: @main-cl;
-    .align-items(center);
-  }
-
-} 
+}
